# py-eip712-structs-ng

./: .gitignore  API.md  LICENSE  README.md  checks.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
src/eip712_structs/: __init__.py  domain_separator.py  struct.py  types.py
src/tests/integration/: conftest.py  test_chain_parity.py
src/tests/integration/contract_sources/: _compile_contracts.py  compile.sh  contract.sol
src/tests/integration/contract_sources/contract_data/: contract.py
src/tests/unit/: test_domain_separator.py  test_encode_data.py  test_encode_type.py  test_message_json.py  test_types.py
