[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eip712-structs-ng"
description = "A Python interface for EIP-712 struct construction."
readme = "README.md"
requires-python = ">= 3.9"
authors = [
  { name = "AJ Grubbs" },
  { name = "Mickaël Schoentgen", email="contact@tiger-222.fr" },
]
maintainers = [
  { name = "Mickaël Schoentgen", email="contact@tiger-222.fr" },
]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
keywords = [
  "ethereum",
  "eip712",
  "solidity",
]
dynamic = ["version"]
dependencies = [
  "eth-utils",
]

[project.urls]
Source = "https://github.com/BoboTiG/py-eip712-structs-ng"
Tracker = "https://github.com/BoboTiG/py-eip712-structs-ng/issues"
"Released Versions" = "https://github.com/BoboTiG/py-eip712-structs-ng/releases"

[project.optional-dependencies]
tests = [
  "eth-tester[py-evm]==0.13.0b1",
  "mypy==1.16.1",
  "py-solc-x==2.0.4",
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "requests==2.32.4",
  "ruff==0.12.2",
  "setuptools==80.9.0",
  "web3==7.12.1",
]
dev = [
  "build==1.2.2.post1",
  "twine==6.1.0",
]

[tool.hatch.version]
path = "src/eip712_structs/__init__.py"

[tool.hatch.build]
skip-excluded-dirs = true

[tool.hatch.build.targets.sdist]
only-include = [
  "src",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/eip712_structs",
]

[tool.mypy]
# Ensure we know what we do
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

# Imports management
ignore_missing_imports = true
follow_imports = "skip"

# Ensure full coverage
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true

# Restrict dynamic typing (a little)
# e.g. `x: List[Any]` or x: List`
# disallow_any_generics = true

strict_equality = true

[tool.pytest.ini_options]
pythonpath = "src"
addopts = """
  --showlocals
  --strict-markers
  -r fE
  -vvv
  --cov=src/eip712_structs
  --cov-report=term-missing:skip-covered
"""

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = ["I"]
